refactor(downloader): 重构 下载器以支持多线程和进度跟踪 - 更新 shadow 插件版本从 9.1.0 到 9.2.1 - 重新设计 Downloader 类，使用实例化 HttpClient 并配置超时 - 引入 DownloadProgress 类用于跟踪和显示下载进度 - 实现多线程分块下载逻辑，提升大文件下载效率 - 添加单线程和流式下载策略以适应不同服务器支持情况 - 改进批量下载功能，使用虚拟线程池并发处理多个下载任务 - 增加文件名提取逻辑和更精确的错误处理 - 控制台输出优化，提供更清晰的下载状态信息 - 修复部分代码格式和注释问题，提高代码可读性